# mor

./: Cargo.toml  LICENSE  README.md
mor-cli/: Cargo.toml
mor-cli/src/: main.rs
mor-cli/src/commands/: claim.rs  delegate_miner.rs  get_account.rs  initialize.rs  initialize_miner.rs  mine.rs  mod.rs  setup_keypair.rs  undelegate_miner.rs
mor-cli/src/utils/: helpers.rs
mor-core/: Anchor.toml  package.json
mor-core/programs/mor-core/: Cargo.toml
mor-core/programs/mor-core/src/: lib.rs  states.rs
mor-core/programs/mor-core/src/helpers/: constants.rs  errors.rs  utils.rs
mor-core/programs/mor-core/src/instructions/: claim_rewards.rs  delegate.rs  delegate_reward_pool.rs  initialize_miner.rs  initialize_pool.rs  mod.rs  submit_solution.rs  undelegate.rs  undelegate_reward_pool.rs
mor-core/tests/: claim-rewards.ts  create-token.ts  delegate-miner.ts  delegate-reward-pool.ts  fetch-miner.ts  fetch-mining-pool.ts  initialize-miner.ts  initialize-pool.ts  submit-solution-er.ts  submit-solution.ts  undelegate-miner.ts  undelegate-reward-pool.ts
