[package]
name = "mor-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
bs58 = "0.5.1"
colored = "3.0.0"
mor-core = { workspace = true }
solana-client = "2.3.3"
solana-sdk = "2.3.1"
anchor-lang = "0.31.1"
tokio = { version = "1.46.1", features = ["full"] }
clap = { version = "4.5.40", features = ["derive"] }
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"
borsh = "0.10.4"
chrono = "0.4.41"
indicatif = "0.18.0"
sha3 = "0.10.8"
ctrlc = "3.4.7"
solana-system-interface = "1.0.0"
